--- a/styce_ann.css
+++ b/styce_ann.css
@@ -1,60 +1,43 @@
-/* styles.css */
-
+/* styce_ann.css */
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+
   
-  #app {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+}
+.form-groupe{
+  border: #0e0c0c;
   
-  h1 {
-    text-align: center;
-  }
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
   
-  form {
-    border: 1px solid #c5bfbf;
-    border-radius: 10px;
-    padding: 30px;
-  }
-  
-  .form-group {
-    margin-bottom: 50px;
-  }
-  
-  label {
-    display: block;
-    font-weight: bold;
-  }
-  
-  input[type="text"],
-  input[type="number"],
-  textarea,
-  select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  button[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #45a049;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  
+}
+
+input[type="text"],
+input[type="number"],
+textarea,
+select {
+  width: 50%;
+  padding: 8px;
+  border: 2px solid #0e0c0c;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
+}
