--- a/styce_ann.css
+++ b/styce_ann.css
@@ -1,11 +1,8 @@
 /* styce_ann.css */
 body {
-
-  
 }
-.form-groupe{
+.form-groupe {
   border: #0e0c0c;
-  
 }
 
 .form-group {
@@ -15,7 +12,6 @@ body {
 label {
   display: block;
   margin-bottom: 5px;
-  
 }
 
 input[type="text"],
@@ -31,7 +27,7 @@ select {
 
 button {
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 4px;
